syntax = "proto3";
package calculator;
option go_package="calculatorpb";

message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 num = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime = 1;
}

message ComputeAverageRequest {
    float num = 1;
}

message ComputeAverageResponse {
    float result = 1;
}

message FindMaximumRequest{
    int32 num = 1;
}

message FindMaximumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 num = 1;
}

message SquareRootResponse {
    double num_root = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
    rpc ComputeAverage  (stream ComputeAverageRequest) returns (ComputeAverageResponse);
    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse);
    //error handling
    //this rpc will throw an exception if the request num is negative
    //The error sent is type of INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}